--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 
 body{
-    font-family: Arial,Helvetica,sans-serif;
+    font-family: Montessor,Robot;
 }
 #image{
     height: 570px;
-    width: auto;
+    width:100vw;
     background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("images/port.jpg") ;
     background-size: cover;
     background-attachment: fixed;
 }
-
 #image a{
     float: left;
     /*margin: 40px;*/
@@ -25,29 +24,28 @@ body{
     padding: 10px 50px;
 }
 #image h1{
-    position: absolute;
-    top: 150px;
-    left: 550px;
+   position: absolute;
+    top: 160px;
+    left: 560px; 
     width: auto;
     font-size: 70px;
-    font-family: normal normal normal 88px/1.4em avenir-lt-w01_85-heavy1475544,sans-serif;
     font-weight: bold;
     color: white;
 }
 #image p{
     text-align: center;
     position: absolute;
-    top: 230px;
-    left: 600px;
+    top: 240px;
+    left:610px;
     font-size: 22px;
     color: #93A2B9;
     letter-spacing: 4px;
-
 }
+
 .myPic{
-    position: relative;
+    position: absolute;
     top: 450px;
-    left: 650px;
+    left: 640px;
     height: 250px;
     border-radius: 50%;
     border: 8px solid white;
@@ -57,7 +55,7 @@ body{
 .slideshow-container {
   position: relative;
    background-color: aliceblue;
-    height: 600px;
+    height: 550px;
 }
 
 /* Slides */
@@ -65,18 +63,16 @@ body{
   display: none;
   padding: 80px;
   text-align: justify;
-   height: 600px;
+   height: 550px;
 }
 .mySlides h1{
-    color: indigo;
+    color: #FC5E28;
     font-weight: bold;
     margin-top: 100px;
 }
 .mySlides p{
-    color: green;
     margin-top: 60px;
     font-size: 20px;
-    font-family: 'Schoolbell', cursive;
 }
 
 /* Next & previous buttons */
@@ -87,11 +83,12 @@ body{
   width: auto;
   margin-top: -30px;
   padding: 16px;
-  color: #888;
+  color: pink;
   font-weight: bold;
   font-size: 20px;
   border-radius: 0 3px 3px 0;
   user-select: none;
+    background-color: lightgrey;
 }
 
 /* Position the "next button" to the right */
@@ -103,15 +100,15 @@ body{
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 /* The dot/bullet/indicator container */
 .dot-container {
   text-align: center;
   padding: 20px;
-  background: #ddd;
+  background-image: linear-gradient(to right, #050F27, #1E273C);
 }
 
 /* The dots/bullets/indicators */
@@ -120,7 +117,7 @@ body{
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: lightgrey;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -139,41 +136,47 @@ color: white;
     color: white;
 }
 #mySlides1{
-    background-color: lavenderblush;
+    background-image: linear-gradient(to right, #050F27, #1E273C);
+}
+#mySlides1 p{
+    color: white;
 }
 #mySlides2{
-    background-color: #DAF0D5;
+    background-image: linear-gradient(to right, #050F27, #1E273C);
 }
-#mySlides3{
-    background-color: white;
-}
-#mySlides3 .btn{
-    height: 150px;
-    width: 150px;
-    border: 1px solid;
-    border-radius: 50%;
-    margin-top: 50px;
-    background-color: #E85E75;
+#mySlides2 h1{
+    color: #FC5E28;
 }
 #mySlides2 h2{
     margin-top: 50px;
-    color: #001F3D;
+    color: white;
     font-weight: bold; 
     font-size: 20px;
 }
 #mySlides2 p{
     margin-top: 0px;
-    color: #E85E75;
+    color: #C3C5CB;
+}
+#mySlides3{
+     background-image: linear-gradient(to right, #050F27, #1E273C);
+}
+#mySlides3 .btn{
+    height: 150px;
+    width: 150px;
+    border: none;
+    border-radius: 50%;
+    margin-top: 50px;
+    background-image: radial-gradient(#940163, #D6196B, #3C0028);
 }
 #mySlides3 i{
     font-size: 50px;
     padding-left: 0px;
-    color: #022546;
+    color: lightgrey;
 }
 #mySlides3 p{
     margin-top: 0px;
     font-size: 25px;
-    color: steelblue;
+    color:white;
     font-weight: bold;
     text-align: center;
 }
@@ -200,6 +203,11 @@ color: white;
   padding: 20px 0;
   font-size: 30px;
 }
+.grid-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .column {
   float: left;
   width: 50%;
@@ -214,7 +222,7 @@ color: white;
   clear: both;
 }
 #column1{
-    background-color: #3A4664;
+    background-color: #050F27;  /*#3A4664*/
     font-size: 30px;
     text-align: center;
     padding-top: 120px;
@@ -226,14 +234,14 @@ color: white;
     margin: 55px auto;
     width: 75%;
     padding: 20px;
-    background-color: #3D1053;
+    background-color: #050F27/*#3D1053 */;
     margin-top: 65px;
 }
 #border a{
     color: white;
 }
 #column2{
-    background-color: #C8477C;
+    background-color:#A41655  /*#FC5E28 #C8477C*/;
 }
 #column2 a{
     text-decoration: none;
@@ -246,15 +254,14 @@ color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #031321;
-    font-family: consolas;
+    background: /*#031321 #1B728B*/#115262 ;
 }
 
 #button a{
     position: relative;
     display: inline-block;
     padding: 15px 30px;
-    color: #2196f3;
+    color: white;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
@@ -264,7 +271,7 @@ color: white;
 }
 
 #button a:hover{
-    color: #255784;
+    color: white;
     background: #2196f3;
     box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
     transition-delay: 1s;
@@ -326,15 +333,9 @@ color: white;
 .footer{
     text-align: center;
     line-height: center;
-    background-color: lightgrey;
+    background-color: lightgray;
     padding: 15px;
 }
 .footer p{
     margin: 0;
-}
-@media only screen and (max-width: 768px){
-    .slideshow-container {
-        clas
-    }
-    
 }
